--- a/main.xaml
+++ b/main.xaml
@@ -1,9 +1,11 @@
 <Controls:MetroWindow
         xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"		
-		xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks" 				
-        Title="CoreFix" Name="MainPanel" 
+        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"	
+		xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+		xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks" 
+		xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        Title="CoreFix"
 		Height="290" Width="450" 
 		WindowStartupLocation="CenterScreen"
 		ResizeMode="CanMinimize"
@@ -32,35 +34,120 @@
 						<GroupBox Header="off" VerticalAlignment="Top" Margin="225,-67,0,0" Height="60" Width="120">
 							<Label x:Name="activity" FontFamily="Calibri" FontWeight="Bold" FontSize="18" HorizontalAlignment="Left" Margin="0,-5,0,0" VerticalAlignment="Top" Width="200"/>			
 						</GroupBox>
-						<GroupBox Header="Set Value" VerticalAlignment="Top" Margin="-315,0,0,0" Height="195" Width="180">
-							<StackPanel Margin="15,0,0,0">
-								<StackPanel Orientation="Horizontal" Margin="10,0,0,0">
-									<StackPanel Orientation="Vertical" Margin="0,0,0,0">
-										<TextBox x:Name="process_name" 
-											Controls:TextBoxHelper.Watermark="Process Name" 
-											Controls:TextBoxHelper.ClearTextButton="{Binding RelativeSource={RelativeSource Self}, Path=(Controls:TextBoxHelper.HasText), Mode=OneWay}"
-											Height="23" Width="120" Margin="0,5,0,0" 
-											VerticalAlignment="Top" />
-										<ComboBox x:Name="threads_value" 
-												Controls:TextBoxHelper.Watermark="Theads value"
-												Height="23" Width="120" Margin="0,5,0,0"
-												MaxDropDownHeight="120"											
-												VerticalAlignment="Top">
-											<ComboBoxItem Content="0"></ComboBoxItem>
-										</ComboBox>
-										<TextBox x:Name="time_value" 
-											Controls:TextBoxHelper.Watermark="Waiting time(sec)" 
-											Controls:TextBoxHelper.ClearTextButton="{Binding RelativeSource={RelativeSource Self}, Path=(Controls:TextBoxHelper.HasText), Mode=OneWay}"
-											Height="23" Width="120"	Margin="0,5,0,0" 
-											VerticalAlignment="Top" />
+						<GroupBox VerticalAlignment="Top" Margin="-315,0,0,0" Height="195" Width="180">
+						    <GroupBox.Header>
+								<Grid Height="20"/>
+							</GroupBox.Header>
+							<Grid>
+								<StackPanel>
+									<StackPanel x:Name="header_setvalue_1" Height="30" Margin="0,-34,0,0">
+										<Grid>
+											<StackPanel Orientation="Horizontal">
+												<Label Content="PROFILE"/>
+											</StackPanel>
+											<StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
+												<Button x:Name="AddProfile" 
+														Width="Auto" Height="Auto"
+														Background="Transparent"
+														Margin="0,0,0,0"
+														ToolTip="Add">
+													<iconPacks:PackIconModern
+															Width="12"
+															Height="12"
+															Margin="0"
+															Kind="add"/>	
+												</Button>
+												<Button x:Name="EditProfile"
+														Width="Auto" Height="Auto"
+														Background="Transparent"
+														Margin="5,0,0,0"
+														ToolTip="Edit">
+													<iconPacks:PackIconModern
+															Width="12"
+															Height="12"
+															Margin="0"
+															Kind="Edit"/>	
+												</Button>
+												<Button x:Name="RemoveProfile" 
+														Width="Auto" Height="Auto"
+														Background="Transparent"
+														Margin="5,0,0,0"
+														ToolTip="Remove">
+													<iconPacks:PackIconModern
+															Width="12"
+															Height="12"
+															Margin="0"
+															Kind="Delete"/>	
+												</Button>		
+											</StackPanel>
+										</Grid>
 									</StackPanel>
-								</StackPanel>						
-								<StackPanel Orientation="Vertical" Margin="25,20,0,0">
-									<Button x:Name="BTsettingsDone" Content="Save" HorizontalAlignment="Left" Margin="0,0,0,0" VerticalAlignment="Top" Width="90"/>
+									<StackPanel x:Name="header_setvalue_2" Visibility="Hidden"  Height="30" Margin="0,-34,0,0">
+										<Grid>
+											<StackPanel Orientation="Horizontal">
+												<Label Content="PROFILE"/>
+											</StackPanel>
+											<StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
+												<Button x:Name="ProfileBack" 
+														Width="Auto" Height="Auto"
+														Background="Transparent"
+														Margin="5,0,0,0"
+														ToolTip="Back">
+													<iconPacks:PackIconModern
+															Width="12"
+															Height="12"
+															Margin="0"
+															Kind="arrowleft"/>	
+												</Button>
+											</StackPanel>
+										</Grid>
+									</StackPanel>
 								</StackPanel>
-							</StackPanel>
-						</GroupBox>		
-						<GroupBox Header="Your Config.xml" VerticalAlignment="Top" Margin="120,0,0,0" Height="110" Width="230" >
+								
+								<StackPanel>
+									<Grid>
+										<StackPanel x:Name="grid_setvalue_1" Margin="20,0,0,0">
+											<StackPanel Orientation="Horizontal">
+												<StackPanel Orientation="Vertical">
+													<ComboBox x:Name="profile_name" 
+															Controls:TextBoxHelper.Watermark="Profile"
+															Height="23" Width="125" Margin="0,5,0,0"
+															MaxDropDownHeight="120"											
+															VerticalAlignment="Top">
+													</ComboBox>
+													<TextBox x:Name="time_value" 
+														Controls:TextBoxHelper.Watermark="Waiting time(sec)" 
+														Controls:TextBoxHelper.ClearTextButton="{Binding RelativeSource={RelativeSource Self}, Path=(Controls:TextBoxHelper.HasText), Mode=OneWay}"
+														Height="23" Width="125"	Margin="0,5,0,0" 
+														VerticalAlignment="Top" />
+												</StackPanel>
+											</StackPanel>						
+										</StackPanel>							
+										<StackPanel x:Name="grid_setvalue_2" Visibility="Hidden">
+											<StackPanel Orientation="Vertical">
+												<TextBox x:Name="process_name" 
+														Controls:TextBoxHelper.Watermark="Process Name" 
+														Controls:TextBoxHelper.ClearTextButton="{Binding RelativeSource={RelativeSource Self}, Path=(Controls:TextBoxHelper.HasText), Mode=OneWay}"
+														Height="23" Width="120" Margin="0,5,0,0" 
+														VerticalAlignment="Top" />
+												<ComboBox x:Name="threads_value" 
+														Controls:TextBoxHelper.Watermark="Theads value"
+														Height="23" Width="120" Margin="0,5,0,0"
+														MaxDropDownHeight="120"											
+														VerticalAlignment="Top">
+													<ComboBoxItem Content="0"></ComboBoxItem>
+												</ComboBox>
+												<Button x:Name="ProfileSave" 
+														HorizontalAlignment="Left"  
+														VerticalAlignment="Top" 
+														Margin="50,5,0,0" Width="90"/>
+											</StackPanel>
+										</StackPanel>
+									</Grid>
+								</StackPanel>
+							</Grid>
+						</GroupBox>	
+						<GroupBox Header="Profile Data" VerticalAlignment="Top" Margin="120,0,0,0" Height="110" Width="230" >
 							<StackPanel Orientation="Horizontal" Margin="-10,-20,0,0">
 								<StackPanel Orientation="Vertical" Margin="10,15,0,0">	
 									<Label Content="Process Name:" FontFamily="Calibri" Foreground="#808080" FontWeight="Bold" FontSize="15" HorizontalAlignment="Left" Margin="0,0,0,0" VerticalAlignment="Top" Width="200"/>
@@ -77,15 +164,15 @@
 						</GroupBox>						
 						<GroupBox Header="Choose Theme" VerticalAlignment="Top" Height="80" Margin="120,115,0,0"  Width="230" >
 							<StackPanel Orientation="Horizontal" Margin="5,10,0,0">	
-								<StackPanel Orientation="Vertical" Margin="0,0,0,0">		
-									<ComboBox x:Name="Choose_Theme" SelectedIndex="0" Text="Choose" Height="25" Width="100" Margin="0,0,0,0">
+								<StackPanel Orientation="Vertical">		
+									<ComboBox x:Name="Choose_Theme" SelectedIndex="0" Text="Choose" Height="25" Width="100">
 										<ComboBoxItem x:Name="Theme_Dark" Content="Dark theme"></ComboBoxItem>
 										<ComboBoxItem x:Name="Theme_Light" Content="Light theme"></ComboBoxItem>
 										<ComboBoxItem x:Name="Theme_Custom" Content="Custom Image"></ComboBoxItem>
 									</ComboBox>  	
 								</StackPanel>	
 								<StackPanel Orientation="Vertical" Margin="10,0,0,0">	
-									<ComboBox x:Name="Choose_Accent" SelectedIndex="0" Text="Choose" Height="25" Width="100" Margin="0,0,0,0">
+									<ComboBox x:Name="Choose_Accent" SelectedIndex="0" Text="Choose" Height="25" Width="100">
 									</ComboBox>  	
 								</StackPanel>
 							</StackPanel>
@@ -94,29 +181,29 @@
 				</TabItem>				
 				<TabItem x:Name="About" Header="About" Margin="0,-5,0,0">
 					<Grid>
-						<GroupBox Header="About the program" VerticalAlignment="Top" Margin="120,-40,0,0" Height="235" Width="220" >
+						<GroupBox Header="About the program" VerticalAlignment="Top" Margin="120,-40,0,0" Height="235" Width="230" >
 							<StackPanel Orientation="Vertical" Margin="8,0,0,0">
-								<Label  Content="The program was created on" 
-									Foreground="#808080" FontFamily="Calibri" FontWeight="Bold" FontSize="14" HorizontalAlignment="Left" Margin="0,-5,0,0" VerticalAlignment="Top"/>
-								<Label  Content="the basis of the developer's" 
-									Foreground="#808080" FontFamily="Calibri" FontWeight="Bold" FontSize="14" HorizontalAlignment="Left" Margin="0,-5,0,0" VerticalAlignment="Top"/>							
-								<Label  Content="wishes and does not carry a"
-									Foreground="#808080" FontFamily="Calibri" FontWeight="Bold" FontSize="14" HorizontalAlignment="Left" Margin="0,-5,0,0" VerticalAlignment="Top"/>
-								<Label  Content="large semantic load."
-									Foreground="#808080" FontFamily="Calibri" FontWeight="Bold" FontSize="14" HorizontalAlignment="Left" Margin="0,-5,0,0" VerticalAlignment="Top"/>
-								<Label  Content="Use with pleasure if it was" 
-									Foreground="#808080" FontFamily="Calibri" FontWeight="Bold" FontSize="14" HorizontalAlignment="Left" Margin="0,-5,0,0" VerticalAlignment="Top"/>
-								<Label  Content="useful to you and you use it." 
-									Foreground="#808080" FontFamily="Calibri" FontWeight="Bold" FontSize="14" HorizontalAlignment="Left" Margin="0,-5,0,0" VerticalAlignment="Top"/>
+								<Label  Content="The program was created on the" 
+									Foreground="#808080" FontFamily="Calibri" FontWeight="Bold" FontSize="14" HorizontalAlignment="Left" Margin="0,-5,0,0"/>
+								<Label  Content="basis of the developer's wishes" 
+									Foreground="#808080" FontFamily="Calibri" FontWeight="Bold" FontSize="14" HorizontalAlignment="Left" Margin="0,-5,0,0"/>							
+								<Label  Content="and does not carry a large"
+									Foreground="#808080" FontFamily="Calibri" FontWeight="Bold" FontSize="14" HorizontalAlignment="Left" Margin="0,-5,0,0"/>
+								<Label  Content="semantic load."
+									Foreground="#808080" FontFamily="Calibri" FontWeight="Bold" FontSize="14" HorizontalAlignment="Left" Margin="0,-5,0,0"/>
+								<Label  Content="Use with pleasure if it was useful " 
+									Foreground="#808080" FontFamily="Calibri" FontWeight="Bold" FontSize="14" HorizontalAlignment="Left" Margin="0,-5,0,0"/>
+								<Label  Content="to you and you use it." 
+									Foreground="#808080" FontFamily="Calibri" FontWeight="Bold" FontSize="14" HorizontalAlignment="Left" Margin="0,-5,0,0"/>
 								<Label  Content="_______________________________________________________" 
-									Foreground="#808080" FontFamily="Calibri" FontWeight="Bold" FontSize="14" HorizontalAlignment="Left" Margin="-10,2,0,0" VerticalAlignment="Top"/>
+									Foreground="#808080" FontFamily="Calibri" FontWeight="Bold" FontSize="14" HorizontalAlignment="Left" Margin="-10,2,0,0"/>
 								<Label  x:Name="version" 
-									Foreground="#808080" FontFamily="Calibri" FontWeight="Bold" FontSize="15" HorizontalAlignment="Left" Margin="0,-5,0,0" VerticalAlignment="Top"/>
+									Foreground="#808080" FontFamily="Calibri" FontWeight="Bold" FontSize="15" HorizontalAlignment="Left" Margin="0,-5,0,0"/>
 								<Label  Content="By: KaRus0n / Кузя Пупкин" 
-									Foreground="#808080" FontFamily="Calibri" FontWeight="Bold" FontSize="15" HorizontalAlignment="Left" Margin="0,-10,0,0" VerticalAlignment="Top"/>										
+									Foreground="#808080" FontFamily="Calibri" FontWeight="Bold" FontSize="15" HorizontalAlignment="Left" Margin="0,-10,0,0"/>										
 							</StackPanel>
 						</GroupBox>				
-						<GroupBox Header="My Contacts" VerticalAlignment="Top" Margin="-315,0,0,0" Height="195" Width="180" >
+						<GroupBox Header="My Contacts" VerticalAlignment="Top" HorizontalAlignment="Left" Height="195" Width="180" >
 							<StackPanel>
 								<Button x:Name="bt_youtube" Content="YouTube" Height="30" Width="130" Margin="0,5,0,0" FontFamily="Calibri" FontWeight="Bold" FontSize="15">
 									<Button.Resources>
